<resources>
    <string name="app_name">FitHealth</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_relatorios">Relatórios</string>
    <string name="menu_meus_pacientes">Meus pacientes</string>
    <string name="menu_sobrenos">Sobre nós</string>
    <string name="menu_exercicios">Exercícios</string>
    <string name="app_name_subtitle">Sistema de Treino Reflexivo</string>

    <string name="navigation_drawer_open">Abra o navigation drawer</string>
    <string name="navigation_drawer_close">Fecha o navigation drawer</string>
    <string name="avisoBluetoothDesabilitado">Verificamos que seu bluetooth está desativado. Para executar as funções do HealthFit é necessário ativar o bluetooth. Deseja ativar o bluetooth?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_data_available">Sem dados disponíveis</string>
    <string name="informeNome">Informe seu nome</string>
    <string name="informeDataNascimento">Data de nascimento</string>
    <string name="sexoMasculino">MASCULINO</string>
    <string name="sexoFeminino">FEMININO</string>
    <string name="adicionarPaciente">Adicionar Paciente</string>
    <string name="addPacienteTitle">Adicionar paciente</string>
    <string name="idadePaciente">%1s Anos</string>
    <string name="tituloRelatorio">Relatórios</string>
    <string name="subtituloRelatorio">Consulte os dados coletados para cada perfil criado no sistemas</string>
    <string name="tituloPacientes">Meus Pacientes</string>
    <string name="subtituloPacientes">Visualize o progresso de seus pacientes e adicione novos pacientes</string>
    <string name="tituloExercicios">Exercícios</string>
    <string name="subtituloExercicio">Configure e inicie exercícios para um paciente selecionado</string>
    <string name="tituloConfigurar">Configurar aplicação</string>
    <string name="subtituloConfigurar">Faça a configuração do aplicativo com o dispositivo de treino</string>
    <string name="deletarPaciente">Deseja deletar este paciente?</string>
    <string name="labelTipoExercicio">Tipo Exercício</string>
    <string name="labelCor">Selecione uma cor</string>
    <string name="labelDuracaoExercicio">Duração exercício (segundos)</string>
    <string name="helpDelayContarErro">Esta opção é utilizada para informar quanto tempo o paciente tem para concluir totalmente a ação antes de detectar uma ação como erro</string>
    <string name="save_and_init">Salvar e iniciar</string>
    <string name="save">Salvar</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="labelTimeout">Informar tempo para desligar FitSpot</string>
    <string name="hintTimeout">Tempo para desligar FitSpot (segundos)</string>
    <string name="hintDelayContarError">Tempo para ignorar ação (segundos)</string>
    <string name="headerNumeroDispositivos">Número de FitSpots</string>
    <string name="subtitleNumeroDispositivos">Número de dispositivos FitSpot utilizados no exercício</string>
    <string name="informacoes_invalidas">Informações inválidas</string>
    <string name="labelNomeExercicio">Nome do exercício</string>
    <string name="tipoExercicio">Tipo: %1s</string>
    <string name="timeoutDelay">Timeout: %1d segundos</string>
    <string name="numeroDeCiclos">Ciclos: %1d </string>
    <string name="tempoRandom">Duração: %1d </string>
    <string name="iniciar_exercicio">Iniciar</string>
    <string name="remover_exercicio">Remover</string>
    <string name="titleIniciarExecicio">Iniciar exercício</string>
    <string name="selecionePaciente">Selecione um paciente</string>
    <string name="labelTempoTotal">Tempo decorrido</string>
    <string name="labelAcertos">Acertos</string>
    <string name="labelErros">Erros</string>
    <string name="labelData">Data realização</string>
    <string name="scan_devices">Procurar dispositivos</string>
    <string name="FirstFitSpot">FitSpot 01</string>
    <string name="SecondFitSpot">FitSpot 02</string>
    <string name="ThirdFitSpot">FitSpot 03</string>
    <string name="FourthFitSpot">FitSpot 04</string>
    <string name="selecioneFitSpots">Selecione quais FitSpots usará neste exercício</string>
    <string name="headerCiclos">Número de ciclos</string>
    <string name="subtitleCiclos">"Um ciclo é representado pelo número total de FitSpots "</string>
    <string name="parar">PARAR</string>
    <string name="labelCronometro"><CRONÔMETRO></CRONÔMETRO></string>
    <string name="labelTemporizador">TEMPORIZADOR</string>
    <string name="title_connecting">Conectando...</string>
    <string name="title_connected_to">Conectado a %1$s</string>
    <string name="title_not_connected">Conecte-se a um FitSpot</string>
    <string name="bluetoothStatus">Desconectado</string>
    <string name="hintTempoTotal">Tempo de duração do exercício (segundos)</string>
    <string name="sem_exercicios_cadastrados">Não existem exercícios cadastrados. Clique no botão de + para criar um novo exercício</string>
    <string name="selecioneExercicio">Selecione um exercício</string>
    <string name="title_filtrar_exercicio">Pesquisa avançada</string>
    <string name="aplicar_filtragem">Aplicar</string>
    <string name="informeRangePeriodo">Período dos exercícios</string>
    <string name="remover_filtros">Remover Filtros</string>
    <string name="deletarExercicio">Deseja deletar este exercício?</string>
    <string name="start_spotlight">Start Spotlight</string>
    <string name="close_spotlight">Close Spotlight</string>
    <string name="next_target">Próximo passo</string>
    <string name="targetThreeText">Por fim, nesta lista aparecerá seu FitSpot pareado, basta você conectar-se a ele e poderá usar as funcionalidades do nosso aplicativo.</string>
    <string name="targetTwoText">Neste campo serão apresentados os FitSpots ainda não pareados, para iniciar uma comunicação antes precisamos parear com eles</string>
    <string name="targetOneText">Primeiramente você deve buscar outros dispositivos ao redor, e se o seu FitSpot estiver ligado aparecerá na lista acima</string>
    <string name="targetOnetitle">Como conectar-se a um FitSpot</string>
    <string name="fitspots_pareados">FitSpots pareados</string>
    <string name="configurarAppTitleSpotlight">Configure seu aplicativo com o FitSpot</string>
    <string name="configurarAppDescriptionSpotlight">Acesse o menu \'Configurar aplicação\' para poder iniciar a comunicação com seu dispositivo FitSpot.</string>
    <string name="pacientesAppTitleSpotlight">Adicione seus pacientes</string>
    <string name="pacientesAppDescriptionSpotlight">Você pode adicionar os dados de cada usuário que fará uso do sistema acessando o menu \'Meus Pacientes\'. Esse cadastro é essencial para podermos iniciar cada exercício.</string>
    <string name="exerciciosAppTitleSpotlight">Gerencie seus exercícios</string>
    <string name="exerciciosAppDescriptionSpotlight">No menu \'Exercícios\' você pode gerenciar cada exercício criado e inicia-los, bastando informar o paciente que executará a atividade e pronto, um temporizador aparecerá na tela e o exercício será iniciado.</string>
    <string name="relatoriosAppTitleSpotlight">Veja seus resultados</string>
    <string name="relatoriosAppDescriptionSpotlight">No menu \'Relatórios\' você terá acesso aos resultados coletados em cada exercício, separados por paciente. Podendo ainda filtrar por data e tipo de exercício.</string>
    <string name="toolbarAppTitleSpotlight">Estou conectado?</string>
    <string name="toolbarAppDescriptionSpotlight">Na barra superior podemos ver o nome da tela que estamos e o status de conexão do aplicativo com o FitSpot. Note que para iniciar um exercício você deve estar conectado a um FitSpot.</string>
    <string name="Conectar">Conectar</string>
    <string name="Desconectar">Desconectar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sobreNos">Este aplicativo foi desenvolvido para a obtenção do título de bacharel em Engenharia da Computação pela Universidade Federal do Pará (UFPA). O intuito desta aplicação é atuar tanto como uma ferramenta para o fisioterapeuta, como uma forma de possibilitar a implementação de competitividade nos treinos realizados pelo usuário.</string>
</resources>