<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/stroke_color"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvExercicioNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:text="Nome"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tipoExercicio" />

        <TextView
            android:id="@+id/tipoExercicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tipoExercicio"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/numFitSpotsAtivos"
            app:layout_constraintEnd_toStartOf="@+id/numFitSpotsAtivos"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExercicioNome" />

        <TextView
            android:id="@+id/numFitSpotsAtivos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/tipoExercicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tipoExercicio"
            app:layout_constraintTop_toTopOf="@+id/tipoExercicio"
            tools:text="FitSpots: 1-On, 2-Off, 3-On, 4-Off" />

        <LinearLayout
            android:id="@+id/llData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numFitSpotsAtivos">

            <TextView
                android:id="@+id/numeroCiclos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numeroDeCiclos"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tempoRandom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tempoRandom"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/timeoutDelay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timeoutDelay"
                android:textAlignment="center" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iniciarExercicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/iniciar_exercicio"
            android:textSize="12sp"
            app:icon="@drawable/ic_play"
            app:layout_constraintEnd_toStartOf="@id/ivDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llData" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ivDelete"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/remover_exercicio"
            android:textSize="12sp"
            app:icon="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@id/iniciarExercicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iniciarExercicio"
            app:layout_constraintTop_toBottomOf="@id/llData" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>